<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_monsters">

    <fragment
        android:id="@+id/nav_all_monsters"
        android:name="com.example.bestiary.view.AllMonsters"
        android:label="@string/menu_all_monsters"
        tools:layout="@layout/fragment_all_monsters" />

    <fragment
        android:id="@+id/nav_used_monsters"
        android:name="com.example.bestiary.view.UsedMonstersFragment"
        android:label="@string/menu_used_monsters"
        tools:layout="@layout/fragment_used_monsters" />

    <fragment
        android:id="@+id/nav_unused_monsters"
        android:name="com.example.bestiary.view.UnusedMonstersFragment"
        android:label="@string/menu_unused_monsters"
        tools:layout="@layout/fragment_unused_monsters" />
</navigation>